<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ba.glaboratory.adem.mypizza.RegisterActivity"
    android:background="@color/background">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstnameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/firstname"
                android:inputType="textCapWords|text"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/lastnameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/lastname"
                android:inputType="textCapWords|text"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/usernameHint"
                android:inputType="text"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/passwordConfirmText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/passwordConfirm"
                android:inputType="textPassword"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/mobileNumberText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:hint="@string/mobilenumber"
                android:inputType="number"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerButton"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@drawable/btn_shape_selector"
                android:textColor="@color/White"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>