<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logosplash"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:minWidth="192dp"
                android:minHeight="192dp" />

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameHint"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_shape_selector"
                android:textColor="@color/White"/>

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/registrationLink"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/smedja"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>