<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ba.glaboratory.adem.mypizza.OrderActivity"
    android:background="@color/background">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

            <ListView
                android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </ListView>

        </LinearLayout>

        <TextView
            android:id="@+id/cijenaText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/smedja"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/imePrezimeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/smedja"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/adresaText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:hint="@string/orderaddress"
            android:inputType="text"
            android:background="@drawable/text_shape"
            android:textColor="@color/smedja"/>

        <EditText
            android:id="@+id/mobileNumberText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:hint="@string/mobilenumber"
            android:inputType="number"
            android:background="@drawable/text_shape"
            android:textColor="@color/smedja"/>

        <Button
            android:id="@+id/finishOrderButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/orderButton"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:background="@drawable/btn_shape_selector"
            android:textColor="@color/White"/>

    </TableLayout>

</RelativeLayout>
