<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_pizza"/>

                <TextView
                    android:id="@+id/pizzaVrsta"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/pizza_vrsta_prompt"
                    android:textColor="@color/zelena"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:padding="5dp"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/pizzaVrstaSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/ic_size"/>

                <TextView
                    android:id="@+id/pizzaVelicina"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/pizza_velicina_prompt"
                    android:textColor="@color/zelena"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:padding="5dp"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/pizzaVelicinaSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_shape"
                android:textColor="@color/smedja"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/pizzaOpis"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/smedja"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/pizzaCijena"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textColor="@color/smedja"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"/>

            <Button
                android:id="@+id/orderMoreButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ordermoreButton"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@drawable/btn_shape_selector"
                android:textColor="@color/White"/>

            <Button
                android:id="@+id/finishOrderButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/finishOrderButton"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:background="@drawable/btn_shape_selector"
                android:textColor="@color/White"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>